--- a/dts_rau_cpri_ecp.dtsi
+++ b/dts_rau_cpri_ecp.dtsi
@@ -1,43 +1,43 @@
 
 	ecp0@800 {
 		compatible = "generic-uio";
-		reg = < 0x8002c000 0x1000 >;
+		reg = < 0xb002c000 0x1000 >;
 		interrupt-controller;
-		interrupt-parent = <&intc>;
+		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
-		interrupts = < 0 32 4 >;
+		interrupts = < 0 ECP0_IRQ_NUM 4 >;
 	};
 
 	ecp1@880 {
 		compatible = "generic-uio";
-		reg = < 0x8002c000 0x1000 >;
+		reg = < 0xb002c000 0x1000 >;
 		interrupt-controller;
-		interrupt-parent = <&intc>;
+		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
-		interrupts = < 0 33 4 >;
+		interrupts = < 0 ECP1_IRQ_NUM 4 >;
 	};
 
 	ecp2@900 {
 		compatible = "generic-uio";
-		reg = < 0x8002c000 0x1000 >;
+		reg = < 0xb002c000 0x1000 >;
 		interrupt-controller;
-		interrupt-parent = <&intc>;
+		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
-		interrupts = < 0 34 4 >;
+		interrupts = < 0 ECP2_IRQ_NUM 4 >;
 	};
 
 	ecp3@980 {
 		compatible = "generic-uio";
-		reg = < 0x8002c000 0x1000 >;
+		reg = < 0xb002c000 0x1000 >;
 		interrupt-controller;
-		interrupt-parent = <&intc>;
+		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
-		interrupts = < 0 35 4 >;
+		interrupts = < 0 ECP3_IRQ_NUM 4 >;
 	};
 
-	master-xenon@80000000 {
+	master-xenon@b0000000 {
 		compatible = "simple-bus";
-		ranges = < 0x0000000 0x80000000 0x10000000 >;
+		ranges = < 0x0000000 0xb0000000 0x10000000 >;
 		#address-cells = < 0x01 >;
 		#size-cells = < 0x01 >;
 
@@ -89,29 +89,29 @@
 		cpri0-irq@c8 {
 			compatible = "generic-uio";
 			interrupt-controller;
-			interrupt-parent = <&intc>;
-			interrupts = < 0 36 4 >;
+			interrupt-parent = <&gic>;
+			interrupts = < 0 LINK0_IRQ_NUM 4 >;
 		};
 
 		cpri1-irq@1e0 {
 			compatible = "generic-uio";
 			interrupt-controller;
-			interrupt-parent = <&intc>;
-			interrupts = < 0 52 4 >;
+			interrupt-parent = <&gic>;
+			interrupts = < 0 LINK1_IRQ_NUM 4 >;
 		};
 
 		cpri2-irq@2f8 {
 			compatible = "generic-uio";
 			interrupt-controller;
-			interrupt-parent = <&intc>;
-			interrupts = < 0 53 4 >;
+			interrupt-parent = <&gic>;
+			interrupts = < 0 LINK2_IRQ_NUM 4 >;
 		};
 
 		cpri3-irq@410 {
 			compatible = "generic-uio";
 			interrupt-controller;
-			interrupt-parent = <&intc>;
-			interrupts = < 0 54 4 >;
+			interrupt-parent = <&gic>;
+			interrupts = < 0 LINK3_IRQ_NUM 4 >;
 		};
 
 	};
