--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -21,7 +21,7 @@
 
 &fpga_axi {
 
-
+#include "dts_rau_cpri_ecp.dtsi"
 
 	rau_glob_info: rau_glob_info@a0000000 {
 		compatible = "rau,global-info-1.0";
@@ -227,17 +227,17 @@
 
 &fpga_axi {
 
-	axi_intc_1: interrupt-controller@a0024000 {
-		#interrupt-cells = <2>;
-		clocks = <&clkc 71>;
-		compatible = "xlnx,xps-intc-1.00.a";
-		interrupt-controller ;
-		interrupt-parent = <&gic>;
-		interrupts = <0 INTC0_IRQ_NUM 4>;
-		reg = < 0x0 0xA0024000 0x1000 >;
-		xlnx,kind-of-intr = <0x1>;
-		xlnx,num-intr-inputs = <0x10>;
-	};
+	//axi_intc_1: interrupt-controller@a0024000 {
+	//	#interrupt-cells = <2>;
+	//	clocks = <&clkc 71>;
+	//	compatible = "xlnx,xps-intc-1.00.a";
+	//	interrupt-controller ;
+	//	interrupt-parent = <&gic>;
+	//	interrupts = <0 INTC0_IRQ_NUM 4>;
+	//	reg = < 0x0 0xA0024000 0x1000 >;
+	//	xlnx,kind-of-intr = <0x1>;
+	//	xlnx,num-intr-inputs = <0x10>;
+	//};
 
 	/*sfp i2c 0*/
 	axi_i2c_0: axii2c0@a0020000 {
@@ -283,15 +283,15 @@
 		#size-cells = <0>;
 	};
 
-	/*RTC I2C*/
-	axi_i2c_4: axii2c4@a0025000 {
-		compatible = "xlnx,xps-iic-2.00.a";
-		interrupt-parent = <&axi_intc_1>;
-		clocks = <&clkc 71>;
-		reg = < 0x0 0xA0025000 0x1000 >;
-		interrupts = <0 2 >;
-		#address-cells = <1>;
-		#size-cells = <0>;
-	};
+//	/*RTC I2C*/
+//	axi_i2c_4: axii2c4@a0025000 {
+//		compatible = "xlnx,xps-iic-2.00.a";
+//		interrupt-parent = <&axi_intc_1>;
+//		clocks = <&clkc 71>;
+//		reg = < 0x0 0xA0025000 0x1000 >;
+//		interrupts = <0 2 >;
+//		#address-cells = <1>;
+//		#size-cells = <0>;
+//	};
 
 };
