feat: add gpio num of zynqmp

--- a/peripheral.dtsi
+++ b/peripheral.dtsi
@@ -9,7 +9,10 @@
 			MIO_24, MIO_25, MIO_26, MIO_27, MIO_28, MIO_29, MIO_30, MIO_31,
 			MIO_32, MIO_33, MIO_34, MIO_35, MIO_36, MIO_37, MIO_38, MIO_39,
 			MIO_40, MIO_41, MIO_42, MIO_43, MIO_44, MIO_45, MIO_46, MIO_47,
-			MIO_48, MIO_49, MIO_50, MIO_51, MIO_52, MIO_53,
+			MIO_48, MIO_49, MIO_50, MIO_51, MIO_52, MIO_53, MIO_54, MIO_55,
+			MIO_56, MIO_57, MIO_58, MIO_59, MIO_60, MIO_61, MIO_62, MIO_63,
+			MIO_64, MIO_65, MIO_66, MIO_67, MIO_68, MIO_69, MIO_70, MIO_71,
+			MIO_72, MIO_73, MIO_74, MIO_75, MIO_76, MIO_77, MIO_78,
 			EMIO_00, EMIO_01, EMIO_02, EMIO_03, EMIO_04, EMIO_05, EMIO_06, EMIO_07,
 			EMIO_08, EMIO_09, EMIO_10, EMIO_11, EMIO_12, EMIO_13, EMIO_14, EMIO_15,
 			EMIO_16, EMIO_17, EMIO_18, EMIO_19, EMIO_20, EMIO_21, EMIO_22, EMIO_23,
@@ -17,7 +20,11 @@
 			EMIO_32, EMIO_33, EMIO_34, EMIO_35, EMIO_36, EMIO_37, EMIO_38, EMIO_39,
 			EMIO_40, EMIO_41, EMIO_42, EMIO_43, EMIO_44, EMIO_45, EMIO_46, EMIO_47,
 			EMIO_48, EMIO_49, EMIO_50, EMIO_51, EMIO_52, EMIO_53, EMIO_54, EMIO_55,
-			EMIO_56, EMIO_57, EMIO_58, EMIO_59, EMIO_60, EMIO_61, EMIO_62, EMIO_63;
+			EMIO_56, EMIO_57, EMIO_58, EMIO_59, EMIO_60, EMIO_61, EMIO_62, EMIO_63,
+			EMIO_64, EMIO_65, EMIO_66, EMIO_67, EMIO_68, EMIO_69, EMIO_70, EMIO_71,
+			EMIO_72, EMIO_73, EMIO_74, EMIO_75, EMIO_76, EMIO_77, EMIO_78, EMIO_79,
+			EMIO_80, EMIO_81, EMIO_82, EMIO_83, EMIO_84, EMIO_85, EMIO_86, EMIO_87,
+			EMIO_88, EMIO_89, EMIO_90, EMIO_91, EMIO_92, EMIO_93, EMIO_94;
 };
 
 
