fix: remove MIO78, only 0~77

--- a/peripheral.dtsi
+++ b/peripheral.dtsi
@@ -12,7 +12,7 @@
 			MIO_48, MIO_49, MIO_50, MIO_51, MIO_52, MIO_53, MIO_54, MIO_55,
 			MIO_56, MIO_57, MIO_58, MIO_59, MIO_60, MIO_61, MIO_62, MIO_63,
 			MIO_64, MIO_65, MIO_66, MIO_67, MIO_68, MIO_69, MIO_70, MIO_71,
-			MIO_72, MIO_73, MIO_74, MIO_75, MIO_76, MIO_77, MIO_78,
+			MIO_72, MIO_73, MIO_74, MIO_75, MIO_76, MIO_77,
 			EMIO_00, EMIO_01, EMIO_02, EMIO_03, EMIO_04, EMIO_05, EMIO_06, EMIO_07,
 			EMIO_08, EMIO_09, EMIO_10, EMIO_11, EMIO_12, EMIO_13, EMIO_14, EMIO_15,
 			EMIO_16, EMIO_17, EMIO_18, EMIO_19, EMIO_20, EMIO_21, EMIO_22, EMIO_23,
