--- a/dts_rau_cpri_ecp.dtsi
+++ b/dts_rau_cpri_ecp.dtsi
@@ -1,7 +1,7 @@
 
 	ecp0@800 {
 		compatible = "generic-uio";
-		reg = < 0xb002c000 0x1000 >;
+		reg = < 0x0 0xb002c000 0x1000 >;
 		interrupt-controller;
 		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
@@ -10,7 +10,7 @@
 
 	ecp1@880 {
 		compatible = "generic-uio";
-		reg = < 0xb002c000 0x1000 >;
+		reg = < 0x0 0xb002c000 0x1000 >;
 		interrupt-controller;
 		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
@@ -19,7 +19,7 @@
 
 	ecp2@900 {
 		compatible = "generic-uio";
-		reg = < 0xb002c000 0x1000 >;
+		reg = < 0x0 0xb002c000 0x1000 >;
 		interrupt-controller;
 		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
@@ -28,7 +28,7 @@
 
 	ecp3@980 {
 		compatible = "generic-uio";
-		reg = < 0xb002c000 0x1000 >;
+		reg = < 0x0 0xb002c000 0x1000 >;
 		interrupt-controller;
 		interrupt-parent = <&gic>;
 		channels = < 0x40 >;
@@ -43,47 +43,47 @@
 
 		cpri-reg@0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0000000 0x1000 >;
+			reg = < 0x0 0x0000000 0x1000 >;
 		};
 
 		cpri0-reg@0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0000000 0x1000 >;
+			reg = < 0x0 0x0000000 0x1000 >;
 		};
 
 		cpri1-reg@0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0000000 0x1000 >;
+			reg = < 0x0 0x0000000 0x1000 >;
 		};
 
 		cpri2-reg@0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0000000 0x1000 >;
+			reg = < 0x0 0x0000000 0x1000 >;
 		};
 
 		cpri3-reg@0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0000000 0x1000 >;
+			reg = < 0x0 0x0000000 0x1000 >;
 		};
 
 		mcpri0@0001000 {
 			compatible = "generic-uio";
-			reg = < 0x0011000 0x1000 >;
+			reg = < 0x0 0x0011000 0x1000 >;
 		};
 
 		mcpri1@0001000 {
 			compatible = "generic-uio";
-			reg = < 0x0011000 0x1000 >;
+			reg = < 0x0 0x0011000 0x1000 >;
 		};
 
 		mcpri2@0001000 {
 			compatible = "generic-uio";
-			reg = < 0x0011000 0x1000 >;
+			reg = < 0x0 0x0011000 0x1000 >;
 		};
 
 		mcpri3@0001000 {
 			compatible = "generic-uio";
-			reg = < 0x0011000 0x1000 >;
+			reg = < 0x0 0x0011000 0x1000 >;
 		};
 
 		cpri0-irq@c8 {
