--- a/peripheral.dtsi
+++ b/peripheral.dtsi
@@ -24,22 +24,19 @@
 			EMIO_64, EMIO_65, EMIO_66, EMIO_67, EMIO_68, EMIO_69, EMIO_70, EMIO_71,
 			EMIO_72, EMIO_73, EMIO_74, EMIO_75, EMIO_76, EMIO_77, EMIO_78, EMIO_79,
 			EMIO_80, EMIO_81, EMIO_82, EMIO_83, EMIO_84, EMIO_85, EMIO_86, EMIO_87,
-			EMIO_88, EMIO_89, EMIO_90, EMIO_91, EMIO_92, EMIO_93, EMIO_94;
+			EMIO_88, EMIO_89, EMIO_90, EMIO_91, EMIO_92, EMIO_93, EMIO_94, EMIO_95;
 };
 
 
-&watchdog0 {
-	status = "okay";
-	reset-on-timeout;
+/ {
+	watchdog1: ext_watchdog {
+		/* ADM706 */
+		compatible = "linux,wdt-gpio";
+		gpios = <&gpio 28 GPIO_ACTIVE_LOW>;
+		hw_algo = "toggle";
+		hw_margin_ms = <1600>;
+	};
 };
-
-//watchdog: watchdog {
-//	/* ADM706 */
-//	compatible = "linux,wdt-gpio";
-//	gpios = <&gpio3 9 GPIO_ACTIVE_LOW>;
-//	hw_algo = "toggle";
-//	hw_margin_ms = <1600>;
-//};
 
 &i2c0 {
 	status = "okay";
