--- a/dts_rau_cpri_ecp.dtsi
+++ b/dts_rau_cpri_ecp.dtsi
@@ -35,55 +35,51 @@
 		interrupts = < 0 ECP3_IRQ_NUM 4 >;
 	};
 
-	master-xenon@b0000000 {
-		compatible = "simple-bus";
-		ranges = < 0x0000000 0xb0000000 0x10000000 >;
-		#address-cells = < 0x01 >;
-		#size-cells = < 0x01 >;
 
-		cpri-reg@0000000 {
+
+		cpri-reg@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0000000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		cpri0-reg@0000000 {
+		cpri0-reg@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0000000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		cpri1-reg@0000000 {
+		cpri1-reg@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0000000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		cpri2-reg@0000000 {
+		cpri2-reg@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0000000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		cpri3-reg@0000000 {
+		cpri3-reg@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0000000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		mcpri0@0001000 {
+		mcpri0@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0011000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		mcpri1@0001000 {
+		mcpri1@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0011000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		mcpri2@0001000 {
+		mcpri2@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0011000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
-		mcpri3@0001000 {
+		mcpri3@b0000000 {
 			compatible = "generic-uio";
-			reg = < 0x0 0x0011000 0x1000 >;
+			reg = < 0x0 0xb0000000 0x1000 >;
 		};
 
 		cpri0-irq@c8 {
@@ -114,5 +110,5 @@
 			interrupts = < 0 LINK3_IRQ_NUM 4 >;
 		};
 
-	};
+
 
