--- a/adi-adrv9371.dtsi
+++ b/adi-adrv9371.dtsi
@@ -1,6 +1,7 @@
 
 #include <dt-bindings/iio/frequency/ad9528.h>
 
+//#define USE_AD9545DRV_CFG_AD9528
 
 &fpga_axi {
 	//------------------------------
@@ -12,7 +13,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0010000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 2>;
+#else
 		clocks = <&clk0_ad9528 4>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy0_tx_clk";
 
@@ -31,7 +36,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0011000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 2>;
+#else
 		clocks = <&clk0_ad9528 4>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy0_rx_clk";
 
@@ -53,7 +62,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0012000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 3>;
+#else
 		clocks = <&clk0_ad9528 6>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy1_tx_clk";
 
@@ -72,7 +85,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0013000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 3>;
+#else
 		clocks = <&clk0_ad9528 6>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy1_rx_clk";
 
@@ -95,7 +112,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0014000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 0>;
+#else
 		clocks = <&clk0_ad9528 1>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy2_tx_clk";
 
@@ -114,7 +135,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0015000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 0>;
+#else
 		clocks = <&clk0_ad9528 1>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy2_rx_clk";
 
@@ -136,7 +161,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0016000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 1>;
+#else
 		clocks = <&clk0_ad9528 3>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy3_tx_clk";
 
@@ -155,7 +184,11 @@
 		compatible = "xlnx,jesd204-5.1";
 		reg = <0x0 0xA0017000 0x1000>;
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&clk0_ad9545 1>;
+#else
 		clocks = <&clk0_ad9528 3>;
+#endif
 		clock-names = "jesd_clk";
 		clock-output-names = "jesd_phy3_rx_clk";
 
@@ -175,6 +208,57 @@
 
 &spi0 {
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+	/* 用9545的驱动按刷寄存器列表的方式初始化9528 */
+
+	clk0_ad9545: ad9545-lpc@0 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			#clock-cells = <1>;
+			compatible = "ad9545";
+			reg = <0>;
+
+			//spi-3wire;
+			spi-max-frequency = <15000000>;
+
+			//reset-gpios = <&gpio_daq1 3 0>;
+
+			clock-output-names = "ad9545-1_out0", "ad9545-1_out1", "ad9545-1_out2", "ad9545-1_out3", "ad9545-1_out4";
+
+/include/ "ad9545map.dtsi"
+
+			ad9545_0_c0:channel@0 {
+				reg = <0>;
+				extended-name = "OUT0A";
+				clock-frequency = <122880000>;
+			};
+			ad9545_0_c1:channel@1 {
+				reg = <1>;
+				extended-name = "OUT0B";
+				clock-frequency = <122880000>;
+
+			};
+			ad9545_0_c2:channel@2 {
+				reg = <2>;
+				extended-name = "OUT0C";
+				clock-frequency = <122880000>;
+
+			};
+			ad9545_0_c3:channel@3 {
+				reg = <3>;
+				extended-name = "OUT1A";
+				clock-frequency = <122880000>;
+
+			};
+			ad9545_0_c4:channel@4 {
+				reg = <4>;
+				extended-name = "OUT1B";
+				clock-frequency = <122880000>;
+
+			};
+	};
+
+#else		/* 用9545的驱动按刷寄存器列表的方式初始化9528 */
 
 	clk0_ad9528: ad9528-1@0 {
 			#address-cells = <1>;
@@ -192,18 +276,20 @@
 #elif defined (OSC_30M72)
 			adi,vcxo-freq = <30720000>;
 #endif
-			adi,refa-enable;
-			adi,refa-diff-rcv-enable;
+			adi,refa-enable=<1>;	// rj
+			adi,refa-diff-rcv-enable=<1>;	//rj
 
 #if defined (OSC_122M88)
-                        adi,refa-r-div = <32>;
+            adi,refa-r-div = <8>;	// rj <32>;
 #elif defined (OSC_30M72)
 			adi,refa-r-div = <128>;
 #endif
 			//adi,osc-in-cmos-neg-inp-enable;
 
+			adi,refb-r-div = <16>;	// rj
+
 			/* PLL1 config */
-			adi,pll1-feedback-div = <256>;
+			adi,pll1-feedback-div = <64>;	// <256>;
 
 			adi,pll1-charge-pump-current-nA = <63500>;
 
@@ -219,6 +305,8 @@
 #endif
 			adi,pll2-r1-div = <1>;
 			adi,pll2-charge-pump-current-nA = <805000>;
+
+			adi,ref-mode=<REF_MODE_SELECT_REFB>;	// rj
 
 			/* SYSREF config */
 			adi,sysref-src = <SYSREF_SRC_INTERNAL>;
@@ -249,8 +337,8 @@
 				adi,extended-name = "C_AD9373_DEVCLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
-				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_VCO>;
+				adi,channel-divider = <1>;	// rj <10>;
+				adi,signal-source = <SOURCE_VCXO>;	// rj <SOURCE_VCO>;
 			};
 
 			ad9528_0_c2: channel@2 {
@@ -267,16 +355,16 @@
 				adi,extended-name = "D_AD9373_DEVCLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
-				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_VCO>;
+				adi,channel-divider = <1>;	// rj <10>;
+				adi,signal-source = <SOURCE_VCXO>;	// rj <SOURCE_VCO>;
 			};
 			ad9528_0_c4: channel@4 {
 				reg = <4>;
 				adi,extended-name = "A_AD9373_DEVCLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
-				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_VCO>;
+				adi,channel-divider = <1>;	// rj <10>;
+				adi,signal-source = <SOURCE_VCXO>;	// rj <SOURCE_VCO>;
 			};
 
 			ad9528_0_c5: channel@5 {
@@ -293,8 +381,8 @@
 				adi,extended-name = "B_AD9373_DEVCLK";
 				adi,driver-mode = <DRIVER_MODE_LVDS>;
 				adi,divider-phase = <0>;
-				adi,channel-divider = <10>;
-				adi,signal-source = <SOURCE_VCO>;
+				adi,channel-divider = <1>;	// rj <10>;
+				adi,signal-source = <SOURCE_VCXO>;	// rj <SOURCE_VCO>;
 			};
 
 			ad9528_0_c7: channel@7 {
@@ -359,6 +447,14 @@
 				adi,signal-source = <SOURCE_VCO>;
 			};
 	};
+#endif	/* 用9545的驱动按刷寄存器列表的方式初始化9528 */
+
+/* trx0_ad9371_c  jesd_rx_os_clk,dev_clk： clk0_ad9528 1		clk0_ad9545 0*/
+/* trx0_ad9371_d  jesd_rx_os_clk,dev_clk： clk0_ad9528 3		clk0_ad9545 1*/
+/* trx0_ad9371_a  jesd_rx_os_clk,dev_clk:   clk0_ad9528 4		clk0_ad9545 2*/
+/* trx0_ad9371_b  jesd_rx_os_clk,dev_clk:   clk0_ad9528 6		clk0_ad9545 3*/
+/* trx0_ad9371_*  fmc_clk:                  clk0_ad9528 11		clk0_ad9545 4*/
+
 
 	trx0_ad9371_d: ad937x-phy-1@1 {
 		compatible = "adi,ad9371";
@@ -367,7 +463,11 @@
 		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&jesd_Rx_axi_0>, <&jesd_Tx_axi_0>, <&clk0_ad9545 1>, <&clk0_ad9545 1>, <&clk0_ad9545 4>;
+#else
 		clocks = <&jesd_Rx_axi_0>, <&jesd_Tx_axi_0>, <&clk0_ad9528 4>, <&clk0_ad9528 4>, <&clk0_ad9528 11>;
+#endif
 		clock-names = "jesd_rx_clk", "jesd_tx_clk","jesd_rx_os_clk", "dev_clk", "fmc_clk";
 
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk","lo_rx_clk","lo_tx_clk";
@@ -383,7 +483,11 @@
 		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&jesd_Rx_axi_1>, <&jesd_Tx_axi_1>, <&clk0_ad9545 0>, <&clk0_ad9545 0>, <&clk0_ad9545 4>;
+#else
 		clocks = <&jesd_Rx_axi_1>, <&jesd_Tx_axi_1>, <&clk0_ad9528 6>, <&clk0_ad9528 6>, <&clk0_ad9528 11>;
+#endif
 		clock-names = "jesd_rx_clk", "jesd_tx_clk","jesd_rx_os_clk", "dev_clk", "fmc_clk";
 
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk","lo_rx_clk","lo_tx_clk";
@@ -404,7 +508,11 @@
 		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&jesd_Rx_axi_2>, <&jesd_Tx_axi_2>, <&clk0_ad9545 3>, <&clk0_ad9545 3>, <&clk0_ad9545 4>;
+#else
 		clocks = <&jesd_Rx_axi_2>, <&jesd_Tx_axi_2>, <&clk0_ad9528 1>, <&clk0_ad9528 1>, <&clk0_ad9528 11>;
+#endif
 		clock-names = "jesd_rx_clk", "jesd_tx_clk","jesd_rx_os_clk", "dev_clk", "fmc_clk";
 
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk","lo_rx_clk","lo_tx_clk";
@@ -420,7 +528,11 @@
 		spi-max-frequency = <AD937X_SPI_FREQ>;
 
 		/* Clocks */
+#ifdef USE_AD9545DRV_CFG_AD9528
+		clocks = <&jesd_Rx_axi_3>, <&jesd_Tx_axi_3>, <&clk0_ad9545 2>, <&clk0_ad9545 2>, <&clk0_ad9545 4>;
+#else
 		clocks = <&jesd_Rx_axi_3>, <&jesd_Tx_axi_3>, <&clk0_ad9528 3>, <&clk0_ad9528 3>, <&clk0_ad9528 11>;
+#endif
 		clock-names = "jesd_rx_clk", "jesd_tx_clk","jesd_rx_os_clk", "dev_clk", "fmc_clk";
 
 		clock-output-names = "rx_sampl_clk", "rx_os_sampl_clk", "tx_sampl_clk","lo_rx_clk","lo_tx_clk";
@@ -436,7 +548,7 @@
 &trx0_ad9371_d {
 	reset-gpios = <&gpio 131 0>; //50
 	//test-gpios = <&gpio0 107 0>;
-	sysref_req-gpios = <&gpio 112 0>; //58
+//	sysref_req-gpios = <&gpio 112 0>; //58
 	//rx2_enable-gpios = <&gpio0 108 0>;
 	//rx1_enable-gpios = <&gpio0 109 0>;
 	//tx2_enable-gpios = <&gpio0 110 0>;
@@ -445,22 +557,27 @@
 
 &trx0_ad9371_c {
 	reset-gpios = <&gpio 130 0>;
-	sysref_req-gpios = <&gpio 113 0>;
+//	sysref_req-gpios = <&gpio 113 0>;
 };
 
 &trx0_ad9371_b {
 	reset-gpios = <&gpio 129 0>;
-	sysref_req-gpios = <&gpio 114 0>;
+//	sysref_req-gpios = <&gpio 114 0>;
 };
 
 
 &trx0_ad9371_a {
 	reset-gpios = <&gpio 128 0>;
-	sysref_req-gpios = <&gpio 114 0>;
+	sysref_req-gpios = <&gpio 120 0>;
+	sysref_req_controller=<1>;
 };
 
 
+#ifdef USE_AD9545DRV_CFG_AD9528
+&clk0_ad9545 {
+#else
 &clk0_ad9528 {
+#endif
 	reset-gpios = <&gpio 121 0>;
 };
 
