--- a/peripheral.dtsi
+++ b/peripheral.dtsi
@@ -50,6 +50,28 @@
 
 &i2c1 {
 	status = "okay";
+
+	eeprom@50 {
+		compatible = "atmel,24c512";
+		reg = <0x50>;
+		pagesize = <256>;
+	};
+	eeprom@51 {
+		compatible = "atmel,24c512";
+		reg = <0x51>;
+		pagesize = <256>;
+	};
+	eeprom@52 {
+		compatible = "atmel,24c512";
+		reg = <0x52>;
+		pagesize = <256>;
+	};
+	eeprom@53 {
+		compatible = "atmel,24c512";
+		reg = <0x53>;
+		pagesize = <256>;
+	};
+
 };
 
 
