feat: add rau,cpri-route regions

--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -119,6 +119,120 @@
 
 	};
 
+	//-------------- CPRI Route --------------------------
+	cpri_route_0: cpri-route-0@a0001540 {
+		compatible = "rau,cpri-route-0.1";
+		//reg = <0xA0001540 0x600>;//总共
+		reg = <0x0 0xA0001540 0x40>,
+		      <0x0 0xA0001580 0x40>,
+		      <0x0 0xA00015C0 0x40>,
+		      <0x0 0xA0001600 0x40>,
+		      <0x0 0xA0001640 0x40>,
+		      <0x0 0xA0001680 0x40>,
+		      <0x0 0xA00016C0 0x40>,
+		      <0x0 0xA0001700 0x40>,
+		      <0x0 0xA0001740 0x40>,
+		      <0x0 0xA0001780 0x40>,
+		      <0x0 0xA00017C0 0x40>,
+		      <0x0 0xA0001800 0x40>,
+		      <0x0 0xA0001840 0x40>,
+		      <0x0 0xA0001880 0x40>,
+		      <0x0 0xA00018C0 0x40>,
+		      <0x0 0xA0001900 0x40>,
+		      <0x0 0xA0001940 0x40>,
+		      <0x0 0xA0001980 0x40>,
+		      <0x0 0xA00019C0 0x40>,
+		      <0x0 0xA0001A00 0x40>,
+		      <0x0 0xA0001A40 0x40>,
+		      <0x0 0xA0001A80 0x40>,
+		      <0x0 0xA0001AC0 0x40>,
+		      <0x0 0xA0001B00 0x40>;
+	};
+	cpri_route_1: cpri-route-1@a0001b40 {
+		compatible = "rau,cpri-route-0.1";
+		//reg = <0xA0001B40 0x600>;//总共
+		reg = <0x0 0xA0001B40 0x40>,
+		      <0x0 0xA0001B80 0x40>,
+		      <0x0 0xA0001BC0 0x40>,
+		      <0x0 0xA0001C00 0x40>,
+		      <0x0 0xA0001C40 0x40>,
+		      <0x0 0xA0001C80 0x40>,
+		      <0x0 0xA0001CC0 0x40>,
+		      <0x0 0xA0001D00 0x40>,
+		      <0x0 0xA0001D40 0x40>,
+		      <0x0 0xA0001D80 0x40>,
+		      <0x0 0xA0001DC0 0x40>,
+		      <0x0 0xA0001E00 0x40>,
+		      <0x0 0xA0001E40 0x40>,
+		      <0x0 0xA0001E80 0x40>,
+		      <0x0 0xA0001EC0 0x40>,
+		      <0x0 0xA0001F00 0x40>,
+		      <0x0 0xA0001F40 0x40>,
+		      <0x0 0xA0001F80 0x40>,
+		      <0x0 0xA0001FC0 0x40>,
+		      <0x0 0xA0002000 0x40>,
+		      <0x0 0xA0002040 0x40>,
+		      <0x0 0xA0002080 0x40>,
+		      <0x0 0xA00020C0 0x40>,
+		      <0x0 0xA0002100 0x40>;
+	};
+	cpri_route_2: cpri-route-2@a0002140 {
+		compatible = "rau,cpri-route-0.1";
+		//reg = <0xA0000000 0x600>;//总共
+		reg = <0x0 0xA0002140 0x40>,
+		      <0x0 0xA0002180 0x40>,
+		      <0x0 0xA00021C0 0x40>,
+		      <0x0 0xA0002200 0x40>,
+		      <0x0 0xA0002240 0x40>,
+		      <0x0 0xA0002280 0x40>,
+		      <0x0 0xA00022C0 0x40>,
+		      <0x0 0xA0002300 0x40>,
+		      <0x0 0xA0002340 0x40>,
+		      <0x0 0xA0002380 0x40>,
+		      <0x0 0xA00023C0 0x40>,
+		      <0x0 0xA0002400 0x40>,
+		      <0x0 0xA0002440 0x40>,
+		      <0x0 0xA0002480 0x40>,
+		      <0x0 0xA00024C0 0x40>,
+		      <0x0 0xA0002500 0x40>,
+		      <0x0 0xA0002540 0x40>,
+		      <0x0 0xA0002580 0x40>,
+		      <0x0 0xA00025C0 0x40>,
+		      <0x0 0xA0002600 0x40>,
+		      <0x0 0xA0002640 0x40>,
+		      <0x0 0xA0002680 0x40>,
+		      <0x0 0xA00026C0 0x40>,
+		      <0x0 0xA0002700 0x40>;
+	};
+	cpri_route_3: cpri-route-3@a0002740 {
+		compatible = "rau,cpri-route-0.1";
+		//reg = <0xA0000000 0x600>;//总共
+		reg = <0x0 0xA0002740 0x40>,
+		      <0x0 0xA0002780 0x40>,
+		      <0x0 0xA00027C0 0x40>,
+		      <0x0 0xA0002800 0x40>,
+		      <0x0 0xA0002840 0x40>,
+		      <0x0 0xA0002880 0x40>,
+		      <0x0 0xA00028C0 0x40>,
+		      <0x0 0xA0002900 0x40>,
+		      <0x0 0xA0002940 0x40>,
+		      <0x0 0xA0002980 0x40>,
+		      <0x0 0xA00029C0 0x40>,
+		      <0x0 0xA0002A00 0x40>,
+		      <0x0 0xA0002A40 0x40>,
+		      <0x0 0xA0002A80 0x40>,
+		      <0x0 0xA0002AC0 0x40>,
+		      <0x0 0xA0002B00 0x40>,
+		      <0x0 0xA0002B40 0x40>,
+		      <0x0 0xA0002B80 0x40>,
+		      <0x0 0xA0002BC0 0x40>,
+		      <0x0 0xA0002C00 0x40>,
+		      <0x0 0xA0002C40 0x40>,
+		      <0x0 0xA0002C80 0x40>,
+		      <0x0 0xA0002CC0 0x40>,
+		      <0x0 0xA0002D00 0x40>;
+	};
+
 
 	rf_port_axi_0: RF-Port-1A@a0001040 {
 		#clock-cells = <1>;
