fix: speed up pll1 lock time

--- a/adi-adrv9371.dtsi
+++ b/adi-adrv9371.dtsi
@@ -281,17 +281,17 @@
 			adi,refa-diff-rcv-enable=<1>;	//rj
 
 #if defined (OSC_122M88)
-            adi,refa-r-div = <132>;	// rj <32>;
+			adi,refa-r-div = <66>;
 #elif defined (OSC_30M72)
 			adi,refa-r-div = <132>;
 #endif
 			//adi,osc-in-cmos-neg-inp-enable;
 
-			adi,refb-r-div = <16>;	// rj
+			adi,refb-r-div = <8>;
 
 			/* PLL1 config */
 #if defined (OSC_122M88)
-			adi,pll1-feedback-div = <64>;	// <256>;
+			adi,pll1-feedback-div = <32>;
 #elif defined (OSC_30M72)
 			adi,pll1-feedback-div = <16>;
 #endif
