--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -374,7 +374,11 @@
 		};
 		partition@600000 {
 			label = "config";
-			reg = <0x00600000 0x00100000>;
+			reg = <0x00600000 0x00200000>;
+		};
+		partition@800000 {
+			label = "hwtab";
+			reg = <0x00800000 0x00800000>;
 		};
 	};
 };
