--- a/zynqmp-zcu102-revA.dts
+++ b/zynqmp-zcu102-revA.dts
@@ -110,7 +110,8 @@
 
 	phy0: phy@0 {
 		reg = <0>;
-		marvell,reg-init=<3 16 0xff00 0x1e
+		//0x1ebb,[7:4]yellow,[3:0]green
+		marvell,reg-init=<3 16 0xffff 0x1e40
 				  3 17 0xfff0 0x0a>;
 
 		ti,rx-internal-delay = <0x8>;
