--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -390,7 +390,7 @@
 		compatible = "xlnx,xps-intc-1.00.a";
 		interrupt-controller ;
 		interrupt-parent = <&gic>;
-		interrupts = <0 INTC0_IRQ_NUM IRQ_TYPE_EDGE_RISING>;
+		interrupts = <0 INTC0_IRQ_NUM IRQ_TYPE_LEVEL_HIGH>;
 		reg = < 0x0 0xA0024000 0x1000 >;
 		xlnx,kind-of-intr = <0x1>;
 		xlnx,num-intr-inputs = <0x10>;
@@ -402,7 +402,7 @@
 		interrupt-parent = <&gic>;
 		clocks = <&clkc 71>;
 		reg = < 0x0 0xa0020000 0x1000 >;
-		interrupts = <0 SFPIIC0_IRQ_NUM IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 SFPIIC0_IRQ_NUM IRQ_TYPE_EDGE_FALLING>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
@@ -413,7 +413,7 @@
 		interrupt-parent = <&gic>;
 		clocks = <&clkc 71>;
 		reg = < 0x0 0xa0021000 0x1000 >;
-		interrupts = <0 SFPIIC1_IRQ_NUM IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 SFPIIC1_IRQ_NUM IRQ_TYPE_EDGE_FALLING>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
@@ -424,7 +424,7 @@
 		interrupt-parent = <&gic>;
 		clocks = <&clkc 71>;
 		reg = < 0x0 0xa0022000 0x1000 >;
-		interrupts = <0 SFPIIC2_IRQ_NUM IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 SFPIIC2_IRQ_NUM IRQ_TYPE_EDGE_FALLING>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
@@ -435,7 +435,7 @@
 		interrupt-parent = <&gic>;
 		clocks = <&clkc 71>;
 		reg = < 0x0 0xa0023000 0x1000 >;
-		interrupts = <0 SFPIIC3_IRQ_NUM IRQ_TYPE_LEVEL_HIGH>;
+		interrupts = <0 SFPIIC3_IRQ_NUM IRQ_TYPE_EDGE_FALLING>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 	};
@@ -446,7 +446,7 @@
 		interrupt-parent = <&axi_intc_1>;
 		clocks = <&clkc 71>;
 		reg = < 0x0 0xA0025000 0x1000 >;
-		interrupts = <0 IRQ_TYPE_EDGE_RISING >;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING >;
 		#address-cells = <1>;
 		#size-cells = <0>;
 
