--- a/adi-adrv9371.dtsi
+++ b/adi-adrv9371.dtsi
@@ -585,7 +585,8 @@
 &trx0_ad9371_a {
 	reset-gpios = <&gpio 128 0>;
 	jesdtri-gpios = <&gpio 140 0>;
-	//sysref_req_controller=<1>;
+	sysref_req-gpios = <&gpio 120 0>;
+	sysref_req_controller=<1>;
 	interrupt-parent = <&gpio>;
 	interrupts = <GPIO_AD937X_4_GPINT IRQ_TYPE_EDGE_RISING>;
 };
@@ -597,7 +598,6 @@
 &clk0_ad9528 {
 #endif
 	reset-gpios = <&gpio 121 0>;
-	sysref-gpios = <&gpio 120 0>;
 };
 
 
