--- a/rau-fpga.dtsi
+++ b/rau-fpga.dtsi
@@ -281,7 +281,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001040 0x40>,
 		      <0x0 0xA00014C0 0x04>, // Port_SW_Control
-		      <0x0 0xA00014E0 0x04>; // PA_SW
+		      <0x0 0xA00014E0 0x04>, // PA_SW
+		      <0x0 0xA0001400 0x01>; // LED
 
 		clocks = <&trx0_ad9371_d 3>, <&trx0_ad9371_d 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -295,7 +296,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001080 0x40>,
 		      <0x0 0xA00014C4 0x04>, // Port_SW_Control
-		      <0x0 0xA00014E4 0x04>; // PA_SW
+		      <0x0 0xA00014E4 0x04>, // PA_SW
+		      <0x0 0xA0001401 0x01>; // LED
 
 		clocks = <&trx0_ad9371_d 3>, <&trx0_ad9371_d 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -308,7 +310,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA00010C0 0x40>,
 		      <0x0 0xA00014C8 0x04>, // Port_SW_Control
-		      <0x0 0xA00014E8 0x04>; // PA_SW
+		      <0x0 0xA00014E8 0x04>, // PA_SW
+		      <0x0 0xA0001402 0x01>; // LED
 
 		clocks = <&trx0_ad9371_c 3>, <&trx0_ad9371_c 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -321,7 +324,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001100 0x40>,
 		      <0x0 0xA00014CC 0x04>, // Port_SW_Control
-		      <0x0 0xA00014EC 0x04>; // PA_SW
+		      <0x0 0xA00014EC 0x04>, // PA_SW
+		      <0x0 0xA0001403 0x01>; // LED
 
 		clocks = <&trx0_ad9371_c 3>, <&trx0_ad9371_c 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -337,7 +341,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001140 0x40>,
 		      <0x0 0xA00014D0 0x04>, // Port_SW_Control
-		      <0x0 0xA00014F0 0x04>; // PA_SW
+		      <0x0 0xA00014F0 0x04>, // PA_SW
+		      <0x0 0xA0001404 0x01>; // LED
 
 		clocks = <&trx0_ad9371_b 3>, <&trx0_ad9371_b 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -351,7 +356,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001180 0x40>,
 		      <0x0 0xA00014D4 0x04>, // Port_SW_Control
-		      <0x0 0xA00014F4 0x04>; // PA_SW
+		      <0x0 0xA00014F4 0x04>, // PA_SW
+		      <0x0 0xA0001405 0x01>; // LED
 
 		clocks = <&trx0_ad9371_b 3>, <&trx0_ad9371_b 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -364,7 +370,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA00011C0 0x40>,
 		      <0x0 0xA00014D8 0x04>, // Port_SW_Control
-		      <0x0 0xA00014F8 0x04>; // PA_SW
+		      <0x0 0xA00014F8 0x04>, // PA_SW
+		      <0x0 0xA0001406 0x01>; // LED
 
 		clocks = <&trx0_ad9371_a 3>, <&trx0_ad9371_a 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -377,7 +384,8 @@
 		compatible = "rau,rf-port-0.1";
 		reg = <0x0 0xA0001200 0x40>,
 		      <0x0 0xA00014DC 0x04>, // Port_SW_Control
-		      <0x0 0xA00014FC 0x04>; // PA_SW
+		      <0x0 0xA00014FC 0x04>, // PA_SW
+		      <0x0 0xA0001407 0x01>; // LED
 
 		clocks = <&trx0_ad9371_a 3>, <&trx0_ad9371_a 4> ;
 		clock-names = "lo_rx_freq","lo_tx_freq";
@@ -387,9 +395,9 @@
 
 
 
-	mmi_ledc: mmi_ledc@a0001400 {
+	mmi_ledc: mmi_ledc@a0001408 {
 		compatible = "rau,emmi-ledc";
-		reg = <0x0 0xA0001400 0x40>;
+		reg = <0x0 0xA0001408 0x0F>;
 
 	};
 
